<resources>
    <string name="app_name">Project101</string>
    <string name="login_now">Login Now!!</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="get_started">Get Started</string>
    <string name="email_address">Email Address</string>
    <string name="_continue">Continue</string>
    <string name="change_image">Change Image</string>
</resources>